# jessip

./: .gitignore  configure.ac
m4/: pthread.m4
src/: CallDialogSet.cpp  CallDialogSet.h  ClientSubscriptionHandler.cpp  ClientSubscriptionHandler.h  DialogSetFactory.cpp  DialogSetFactory.h  Exception.cpp  Exception.h  InviteSessionHandler.cpp  InviteSessionHandler.h  JsHandlerContextObjectFactory.cpp  JsHandlerContextObjectFactory.h  JsNameAddrObjectFactory.cpp  JsNameAddrObjectFactory.h  JsObjectFactory.cpp  JsObjectFactory.h  JsProxyBase.cpp  JsProxyBase.h  JsSIPFactory.cpp  JsSIPFactory.h  JsSIPFactoryImpl.cpp  JsSIPFactoryImpl.h  JsSIPMessageObjectFactory.cpp  JsSIPMessageObjectFactory.h  JsSIPObject.cpp  JsSIPObject.h  JsSIPUtilities.cpp  JsSIPUtilities.h  Makefile.am  Runtime.cpp  Runtime.h  ScheduledEvent.cpp  ScheduledEvent.h  main.cpp  siptest.js
